--- a/fpl/templates/news.html
+++ b/fpl/templates/news.html
@@ -1,10 +1,42 @@
 {% extends 'index.html' %}
 {% block maincontent %}
-<div class="webpage_header">
-					<h2>LATEST PLAYER NEWS</h2>
-					<p>{{current_date_time}}</p>
+
+<section class="header">
+		
+			<nav>
+				<a class="logo" href="{{url_for('home')}}">FPL<span>CHEATBOT</span></a>
+				<div class="nav-links" id='navLinks'>
+				<i class="fa fa-times" onclick="hideMenu()"></i>
+
+				<ul>
+					<li><a href="{{url_for('home')}}">Home</a></li>
+					<li><a href="{{url_for('livescore')}}">Livescore</a></li>
+					<li><a href="{{url_for('formations')}}">Formation Drafts</a></li>
+					<li><a href="{{url_for('news')}}">News</a></li>
+					<!--<li><a href="{{url_for('stats')}}">Stats</a></li>
+					<li><a href="{{url_for('manager_info')}}">Manager info</a></li> -->
+					<li><a href="{{url_for('help')}}">How It Works</a></li>
+					<li><a href="https://yemisi-portfolio.herokuapp.com/" target="_blank"  >Contact Me</a></li>
+					
+				</ul>
+				
+				</div>
+				<i class="fa fa-bars" onclick="showMenu()"></i>
+				
+			</nav>
+			
+	
+
+		<div class="text-box">
+			<h1>LATEST PLAYER NEWS</h1>
+			<p>{{current_date_time}}</p>
 		</div>
-<hr>
+	
+
+
+	</section>
+
+
 <div class="news_container">
 {% for index,x in news.iterrows() %}
 
