--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -29,6 +29,9 @@
 <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>	
+	<div class="main_main_container">
+		
+	
 
 
 
@@ -39,18 +42,7 @@
 		
 		<p class="footer">Created by Yemisi. © 2022 SEPTEMBER</p>
 	</div>
-	<!--- javascript for toggle menu --->
-	<script type="text/javascript">
-		var navLinks = document.getElementById('navLinks');
 
-		function showMenu(){
-			navLinks.style.right = '0';
-		}
-
-		function hideMenu(){
-			navLinks.style.right = '-200px';
-		}
-	</script>
-
+</div>
 </body>
 </html>
