--- a/fpl/static/css/newstyles.css
+++ b/fpl/static/css/newstyles.css
@@ -5,6 +5,18 @@
 
 }
 
+:root {
+    --color-text-primary: #1c2a38;
+    --color-text-secondary: #8A8F98;
+    --color-text-alert: #d72641;
+    --color-text-icon: #dbdade;
+    --color-bg-primary: #fff;
+    --color-bg-secondary: #f3f5f9;
+    --color-bg-alert: #fdeaec;
+    --color-theme-primary: #623ce6;
+}
+
+
 .header {
 	min-height: 100vh;
 	width: 100%;
@@ -110,8 +122,8 @@ h1{
 }
 
 p{
-	color: #777;
-	font-size: 14px;
+	color: black;
+	font-size: 20px;
 	font-weight: 14px;
 	line-height: 22px;
 	padding: 10px;
@@ -729,12 +741,16 @@ strong {
 		font-size: 20px;
 	}
 
+    .course p {
+        font-size: 20px;
+    }
+
 
     	
     .nav-links{
         position: absolute;
         top: 50px;
-        left: 0;
+        left: 50px;
         flex: 1;
         text-align: right;
 
@@ -777,10 +793,16 @@ strong {
 		width: 100%;
 		padding-top: 20px;
 	}
-
+    table{
+        width: 80%;
+    }
 	.table_infos{
-		display: block;
+		display: flex;
 	}
+
+    .stat_tables h3{
+        font-size: 30px;
+    }
 
 	.livescore_container{
 		margin: 0;
@@ -789,8 +811,11 @@ strong {
 	}
 
 	.each_news {
-		margin: 10px;
-		width: 200px;
+		margin: 30px;
+		width: 280px;
+        float: none;
+
+
 
 	}
 
