new image header

--- a/fpl/static/css/newstyles.css
+++ b/fpl/static/css/newstyles.css
@@ -21,7 +21,7 @@
 	min-height: 100vh;
 	width: 100%;
 	background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4,9,30,0.7)),
-	 url(https://www.cricketmatchexpress.com/_next/image?url=%2Fimages%2Fposts%2Ffantasy-premier-league-changes%2Ffantasy-premier-league.jpg&w=3840&q=30);
+	 url(https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/blt0d5546c2ea916524/6489df77e165894462d71b2f/EPL_Cover.jpg?auto=webp&format=pjpg&width=3840&quality=60);
 	background-position: center;
 	background-size: cover;
 	position: relative;
