--- a/fpl/static/css/newstyles.css
+++ b/fpl/static/css/newstyles.css
@@ -21,7 +21,7 @@
 	min-height: 100vh;
 	width: 100%;
 	background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4,9,30,0.7)),
-	 url(https://assets.goal.com/images/v3/bltf0c5f6f291ca7e43/Who_will_win_the_Premier_League_title.jpg);
+	 url("../images/header.jpg");
 	background-position: center;
 	background-size: cover;
 	position: relative;
