url change for contact me

--- a/fpl/templates/home.html
+++ b/fpl/templates/home.html
@@ -15,7 +15,7 @@
 					<!--<li><a href="{{url_for('stats')}}">Stats</a></li>
 					<li><a href="{{url_for('manager_info')}}">Manager info</a></li> -->
 					<li><a href="{{url_for('help')}}">How It Works</a></li>
-					<li><a href="https://yemisi-portfolio.herokuapp.com/" target="_blank"  >Contact Me</a></li>
+					<li><a href="https://www.yemisi-og.net/" target="_blank"  >Contact Me</a></li>
 					
 				</ul>
 				
